@@ -1,3 +1,12 @@
+2021-06-03  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GLIB] imported/w3c/web-platform-tests/resource-timing/resource_connection_reuse_mixed_content.html is failing since r277493
+        https://bugs.webkit.org/show_bug.cgi?id=225904
+
+        Reviewed by Michael Catanzaro.
+
+        * platform/glib/TestExpectations:
+
 2021-06-03  Julian Gonzalez  <julian_a_gonzalez@apple.com>
 
         Crash in HTMLConverter::_addLinkForElement()
